# cmake_learning

app/: CMakeLists.txt  main.c
dll_gen/: CMakeLists.txt  my_lib.c  my_lib.h
